Version 0.4.1
-------------
  - Added the ability to rollback the terminal

Version 0.4.0
-------------
  - UNICODE/multiple locales environment implemented
    - (font is still not unicode)
  - Changed font codepage from ibm437 to ibm850
  - Added window icon
  - Cursor improvements
  - When starting vinterm in a tiling window manager, the size of the
    framebuffer wasn't being set correctly
  - Corrected various positioning problems that caused problems with editors
    like ViM and nano.

Version 0.3.0
-------------
  - Window resize/maximize implemented
  - Full screen (CTRL+F11)
  - Full screen with 80 columns (CTRL+SHIFT+F11)
  - Manual page written

Version 0.2.0
-------------
  - Full terminal capabilites implemented.

Version 0.1.2
-------------
  - Changed initialization file to run .bashrc on startup.
  - Added control keys support (such as HOME, END, PAGE UP...)
  - Normal color was made darker, so that bright colors standout more
  - Bugs corrected:
    - Incorrect window title version
    - Memory leaks fixed

Version 0.1.1
-------------
  - Partial VT100 support implemented, enough to run alpine, vim (with syntax
    highlighting) and nethack, and use commands like clear, more and less.
  - Character effects implemented: bold, underlined, blink, reversed and dim.
  - A file is now run when the terminal is started: ~/.vinterm_profile. It
    comes preconfigured with some useful settings for a monochrome terminal.
  - Vintage Terminal is already being programmed with Vintage Terminal.

Version 0.1.0
-------------
  - First public release.